--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,15 @@ repository = "https://github.com/hjr3/hyper-timeout"
 readme = "README.md"
 
 [dependencies]
-hyper = "1.1"
-hyper-util = { version = "0.1", features = ["client-legacy", "http1"] }
+hyper = { git = "https://github.com/meowjesty/hyper", branch = "issue/649/first-http-request-missing" }
+hyper-util = { git = "https://github.com/meowjesty/hyper-util", branch = "issue/649/first-http-request-missing", features = ["client-legacy", "http1"] }
+
 pin-project-lite = "0.2"
 tokio = "1.35"
 tower-service = "0.3"
 
 [dev-dependencies]
 tokio = { version = "1.35", features = ["io-std", "io-util", "macros"] }
-hyper = { version = "1.1", features = ["http1"] }
+hyper = { git = "https://github.com/meowjesty/hyper", branch = "issue/649/first-http-request-missing", features = ["http1"] }
 hyper-tls = "0.6"
 http-body-util = "0.1"
